--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 # Google AI API Key (required)
-GOOGLE_API_KEY="AIzaSyAsucfPhAOLJ22QC1Y5YeHaqxs1Llg9xlA"
+GOOGLE_API_KEY=""
 
 # Optional: OpenAI API Key
 OPENAI_API_KEY=your_openai_key_here
